--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -29,15 +29,29 @@
 	year = {2017}
 }
 
-@article{marinho_da_silva_neto_superposition_2018,
-	title = {A superposition free method for protein conformational ensemble analyses and local clustering based on a differential geometry representation of backbone},
-	issn = {08873585},
-	url = {http://doi.wiley.com/10.1002/prot.25652},
-	doi = {10.1002/prot.25652},
-	language = {en},
-	urldate = {2018-12-24TZ},
-	journal = {Proteins: Structure, Function, and Bioinformatics},
-	author = {Marinho da Silva Neto, Antonio and Silva, Samuel Reghim and Vendruscolo, Michele and Camilloni, Carlo and Montalvao, Rinaldo Wander},
-	month = {dec},
-	year = {2018}
+@article{SilvaNeto2019,
+author = {{Silva Neto}, Antonio Marinho and Silva, Samuel Reghim and Vendruscolo, Michele and Camilloni, Carlo and Montalv{\~{a}}o, Rinaldo Wander},
+doi = {10.1002/prot.25652},
+issn = {0887-3585},
+journal = {Proteins: Structure, Function, and Bioinformatics},
+month = {feb},
+pages = {prot.25652},
+title = {{A superposition free method for protein conformational ensemble analyses and local clustering based on a differential geometry representation of backbone}},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/prot.25652},
+volume = {87},
+year = {2019}
+}
+
+@article{Ludwiczak2019,
+author = {Ludwiczak, Jan and Winski, Aleksander and {da Silva Neto}, Antonio Marinho and Szczepaniak, Krzysztof and Alva, Vikram and Dunin-Horkawicz, Stanislaw},
+doi = {10.1038/s41598-019-43189-4},
+issn = {2045-2322},
+journal = {Scientific Reports},
+month = {dec},
+number = {1},
+pages = {6888},
+title = {{PiPred – a deep-learning method for prediction of $\pi$-helices in protein sequences}},
+url = {http://www.nature.com/articles/s41598-019-43189-4},
+volume = {9},
+year = {2019}
 }
