update publication list

--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,3 +1,17 @@
+@article{Ludwiczak2019_Pipred,
+author = {Ludwiczak, Jan and Winski, Aleksander and {da Silva Neto}, Antonio Marinho and Szczepaniak, Krzysztof and Alva, Vikram and Dunin-Horkawicz, Stanislaw},
+doi = {10.1038/s41598-019-43189-4},
+issn = {2045-2322},
+journal = {Scientific Reports},
+month = {dec},
+number = {1},
+pages = {6888},
+title = {{PiPred – a deep-learning method for prediction of $\pi$-helices in protein sequences}},
+url = {http://www.nature.com/articles/s41598-019-43189-4},
+volume = {9},
+year = {2019}
+}
+
 @article{da_silva_neto_analysis_2016,
 	title = {Analysis of two {Schistosoma} mansoni uridine phosphorylases isoforms suggests the emergence of a protein with a non-canonical function},
 	volume = {125},
@@ -42,16 +56,34 @@ volume = {87},
 year = {2019}
 }
 
-@article{Ludwiczak2019,
-author = {Ludwiczak, Jan and Winski, Aleksander and {da Silva Neto}, Antonio Marinho and Szczepaniak, Krzysztof and Alva, Vikram and Dunin-Horkawicz, Stanislaw},
-doi = {10.1038/s41598-019-43189-4},
-issn = {2045-2322},
-journal = {Scientific Reports},
-month = {dec},
-number = {1},
-pages = {6888},
-title = {{PiPred – a deep-learning method for prediction of $\pi$-helices in protein sequences}},
-url = {http://www.nature.com/articles/s41598-019-43189-4},
-volume = {9},
+
+
+@article{SilvaNeto2019b,
+author = {Antonio Marinho da Silva Neto and Rinaldo Wander Montalvão and Danyelly Bruneska Gondim Martins and José Luiz de Lima Filho and Carlos Henrique Madeiros Castelletti},
+title = {A model of key residues interactions for HPVs E1 DNA binding domain-DNA interface based on HPVs residues conservation profiles and molecular dynamics simulations},
+journal = {Journal of Biomolecular Structure and Dynamics},
+volume = {0},
+number = {0},
+pages = {1-10},
+year  = {2019},
+publisher = {Taylor & Francis},
+doi = {10.1080/07391102.2019.1659185},
+note ={PMID: 31448685},
+URL = {https://doi.org/10.1080/07391102.2019.1659185},
+eprint = {https://doi.org/10.1080/07391102.2019.1659185}
+}
+
+@article{Ludwiczak2019b,
+author = {Ludwiczak, Jan and Szcz{\c{e}}sna, Ewa and {da Silva Neto}, Ant{\^{o}}nio Marinho and Cieplak, Piotr and Kasprzak, Andrzej A. and Jarmu{\l}a, Adam},
+doi = {10.1042/BCJ20190484},
+file = {:home/amarinhosn/Downloads/bcj-2019-0484.pdf:pdf},
+issn = {0264-6021},
+journal = {Biochemical Journal},
+month = {sep},
+number = {17},
+pages = {2449--2462},
+title = {{Interactions between motor domains in kinesin-14 Ncd — a molecular dynamics study}},
+url = {https://portlandpress.com/biochemj/article/476/17/2449-2462/220532},
+volume = {476},
 year = {2019}
 }
