--- a/content/publication/ludwiczak-2019-pipred/ludwiczak-2019-pipred.bib
+++ b/content/publication/ludwiczak-2019-pipred/ludwiczak-2019-pipred.bib
@@ -1,4 +1,4 @@
-@article{Ludwiczak2019,
+@article{Ludwiczak2019_Pipred,
  author = {Ludwiczak, Jan and Winski, Aleksander and da Silva Neto, Antonio Marinho and Szczepaniak, Krzysztof and Alva, Vikram and Dunin-Horkawicz, Stanislaw},
  doi = {10.1038/s41598-019-43189-4},
  issn = {2045-2322},
@@ -6,7 +6,7 @@
  month = {dec},
  number = {1},
  pages = {6888},
- title = {PiPred – a deep-learning method for prediction of $\pi$-helices in protein sequences},
+ title = {PiPred – a deep-learning method for prediction of $π$-helices in protein sequences},
  url = {http://www.nature.com/articles/s41598-019-43189-4},
  volume = {9},
  year = {2019}
